objects/PT_CPL_Document_Upload__e.object
<CustomObject>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <label>ContentDocumentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionId__c</fullName>
        <label>ContentVersionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSHId__c</fullName>
        <label>DSHId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <label>QuoteId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CPL Document Upload</label>
    <pluralLabel>CPL Document Uploads</pluralLabel>
</CustomObject>